2003-06-12  Darin Adler  <darin@apple.com>

        Fixed by Richard, reviewed by me.

	- fixed 3289047 -- REGRESSION: can't go back after using form at attwireless.com

        * khtml/khtmlpart_p.h: Add an "executing JavaScript form action" flag.
        * kwq/WebCoreBridge.h: Add an "executing JavaScript form action" flag parameter to
        the reportClientRedirectToURL method.

        * khtml/khtml_part.cpp: (KHTMLPart::submitForm): In the JavaScript case, set a
        flag to say we are executing a JavaScript form action.
        * kwq/KWQKHTMLPart.mm: (KWQKHTMLPart::redirectionTimerStartedOrStopped): Pass the
        isJavaScriptFormAction state over the bridge.

2003-06-11  David Hyatt  <hyatt@apple.com>

	Fix for 3288875, :after/:before content not getting destroyed
	after printing on alistapart.com.  Make the update method for
	pseudos smart enough to destroy generated content when it is
	no longer needed.
	
        Reviewed by darin

        * khtml/rendering/render_block.cpp:
	(RenderBlock::setStyle);
        * khtml/rendering/render_container.cpp:
        (RenderContainer::updatePseudoChild):
        * khtml/rendering/render_container.h:
        * khtml/rendering/render_inline.cpp:
        (RenderInline::setStyle):

2003-06-11  David Hyatt  <hyatt@apple.com>

	Fix for 3288035, the wrong value was being filled in for
	textfields.  Fixed a bug in QString's assignment operator
	that made empty strings become null strings upon assignment.
	Also ensured that the form control never sets the value to
	null but always uses empty instead.
	
        Reviewed by john

        * khtml/rendering/render_form.cpp:
        (RenderLineEdit::slotTextChanged):
        * kwq/KWQString.mm:
        (QString::setLatin1):

2003-06-10  David Hyatt  <hyatt@apple.com>

	Fix for 3287870, the <embed hidden=true> feature didn't work.
	hidden should turn the embed into a plugin with a width and
	height of 0.
	
        Reviewed by gramps

        * khtml/html/html_objectimpl.cpp: